--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,5 +17,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/9304c4eb40.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>    
   </body>
 </html>
