Goggle auth stuff

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-signin-client_id" content="711812867459-m97h2u5maequivh2m89imhujttt19aqn.apps.googleusercontent.com">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
@@ -18,5 +19,6 @@
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/9304c4eb40.js" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>    
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   </body>
 </html>
